cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage src/DisplayImage.cpp )
add_executable( hough_line_transform src/hough_line_transform.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( hough_line_transform ${OpenCV_LIBS} )
